Fix version link, fix two column layout issue in feed.

--- a/src/objects/feed/_feed.scss
+++ b/src/objects/feed/_feed.scss
@@ -90,6 +90,7 @@
     max-width: 49%;
     flex: 0 0 calc(50% - 12px);
     max-width: calc(50% - 12px);
+    display: none;
   }
 }
 
